updated code for row vs column flex and fixed some basic items

--- a/index.html
+++ b/index.html
@@ -31,33 +31,43 @@
             </history>
 <!-- I'd like to find latest resume and a way to download/upload or change text to contact me for latest CV or visit linkedin profile -->
                     <!-- <p>Download my latest CV here.</p> -->
+            <br>
             <devport>
-                <h3 id="Dev Portfolio">Dev Portfolio</h3>
-                    <p>Here are a couple examples of my dev work. I'm excited to learn and share more.</p>
-                    <ul class="imgbox">
-                        <li><a href="https://jengle-dev.github.io/module-1-challenge/"><img src="assets\images\codeofHoriseon.png" width="200px" height="200px"></a></li>
-                        <li><a href="https://jengle-dev.github.io/demo-site/"><img src="assets\images\flexboxcolumn.png" width="200px" height="200px"></a></li>
-                        <li><a href="https://jengle-dev.github.io/module-2-mini-project-redo/"><img src="assets\images\demosite.png" width="200px" height="200px"></a></li>
-                    </ul>
+                <h3>Dev Portfolio</h3>
+                    <p>Here are a couple examples of my dev work. I'm excited to learn and share more. Each of these were an exercise or project worked on during my KU Software Engineer Bootcamp.</p>
+                <imageboxes class="imgbox">
+                    <a href="https://jengle-dev.github.io/module-1-challenge/" target="_blank">
+                        <img src="assets\images\codeofHoriseon.png" width="200px" height="200px" class="imagebox-design"></a>
+                </imageboxes>
+                <imageboxes class="imgbox">
+                    <a href="https://jengle-dev.github.io/demo-site/" target="_blank">
+                        <img src="assets\images\flexboxcolumn.png" width="200px" height="200px" class="imagebox-design"></a>
+                </imageboxes>
+                <imageboxes class="imgbox">
+                    <a href="https://jengle-dev.github.io/module-2-mini-project-redo/" target="_blank">
+                        <img src="assets\images\demosite.png" width="200px" height="200px" class="imagebox-design"></a>
+                </imageboxes>      
             </devport>
+            <br>
             <artist>
                 <h3 id="The Artist">The Artist</h3>
                     <p>I do not own a flat surface that is not covered in paper or art projects, other than the little space in front of my keyboard and to the right for my mouse. I have been a crafter, creator, creative my entire life. I will create an art portfolio page soon. 
             </p>
             </artist>
+            <br>
             <contact>
                 <h3 id="Contact Info">Contact & Social Media Links</h3>
                     <p>
                         <ul class="textbox">
-                            <li id="email"><strong>Email:</strong> 
+                            <li><strong>Email:</strong> 
                                 <a href="mailto:j.engle.dev@gmail.com"> j.engle.dev@gmail.com</a></li>
-                            <li id="github"><strong>Github:</strong> 
+                            <li><strong>Github:</strong> 
                                 <a href="https://github.com/jengle-dev" target="_blank" rel="noopener noreferrer"> jengle-dev</a></li>
-                            <li id="linkedin"><strong>LinkedIn:</strong> 
+                            <li><strong>LinkedIn:</strong> 
                                 <a href="https://linkedin.com/in/jennifer-engle" target="_blank" rel="noopener noreferrer"> jennifer-engle</a></li>
-                            <li id="instagram"><strong>Instagram:</strong> 
+                            <li><strong>Instagram:</strong> 
                                 <a href="https://instagram.com/jengle2984/" target="_blank"> Personal Account</a></li>
-                            <li id="instagram"><strong>Instagram:</strong> 
+                            <li><strong>Instagram:</strong> 
                                 <a href="https://instagram.com/creativehullaballoo/" target="_blank"> Creative Hullaballoo</a></li>
                         </ul>
                       </p>
@@ -66,6 +76,6 @@
         </main>
     </body>
     <footer>
-        <p><h4>Created December 2022</h4></p>
+        <p><h4><span>&copy</span>2022 by Jennifer Engle</h4></p>
     </footer>
     </html>
