--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
     <body>
         <header>
             <img src="assets\images\header2.png" alt="banner with 2 interlaced circles and Jennifer Engle" class="logo">
-            <h1>Aspiring Software Engineer | Graphic Designer & Creative</h1>
-            <navigation nav>
-                <ul>
-                    <li><h2><a href="#History">History</a></h2></li>
-                    <li><h2><a href="#The Artist">The Artist</a></h2></li>
-                    <li><h2><a href="#Dev Portfolio">Dev Portfolio</a></h2></li>
-                    <li><h2><a href="#Contact Info">Contact Info</a></h2></li>
-                </ul>
-            </navigation>
+                <h1>Aspiring Software Engineer | Graphic Designer & Creative</h1>
+                    <nav>
+                        <h2><a href="#History">History</a></h2>
+                        <h2><a href="#The Artist">The Artist</a></h2>
+                        <h2><a href="#Dev Portfolio">Dev Portfolio</a></h2>
+                        <h2><a href="#Contact Info">Contact Info</a></h2> 
+                    </nav>
         </header>
         <main class="column justify-left">
             <history >
