fixed flex wrap of portfolio items, added profile pic

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
             <br>
             <devport>
                 <h3>Dev Portfolio</h3>
-                    <p>Here are a couple examples of my dev work. I'm excited to learn and share more. Each of these were an exercise or project worked on during my KU Software Engineer Bootcamp.</p>
-                <imageboxes class="imgbox">
+                    <p>Here are a couple examples of my dev work. I'm excited to learn and share more. Each of these were an exercise or project worked on during my KU Software Engineer Bootcamp. Clicking on the below image will open the corresponding webpage in a new tab of your browser.</p>
+                <section class="devport">
+                    <imageboxes class="imgbox">
                     <a href="https://jengle-dev.github.io/module-1-challenge/" target="_blank">
                         <img src="assets\images\codeofHoriseon.png" width="200px" height="200px" class="imagebox-design"></a>
                 </imageboxes>
@@ -44,7 +45,8 @@
                 <imageboxes class="imgbox">
                     <a href="https://jengle-dev.github.io/module-2-mini-project-redo/" target="_blank">
                         <img src="assets\images\demosite.png" width="200px" height="200px" class="imagebox-design"></a>
-                </imageboxes>      
+                </imageboxes>
+                </section>      
             </devport>
             <br>
             <artist>
@@ -74,6 +76,7 @@
         </main>
     </body>
     <footer>
+        <img src="assets\images\Oct22Selfie.png" alt="woman smiling with short hair" class="selfie">
         <p><h4><span>&copy</span>2022 by Jennifer Engle</h4></p>
     </footer>
     </html>
