moved footer to the bottom left - final commit before turning in assignment

--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
     </body>
     <footer>
         <img src="assets\images\Oct22Selfie.png" alt="woman smiling with short hair" class="selfie">
-        <p><h4><span>&copy</span>2022 by Jennifer Engle</h4></p>
+        <h4><span>&copy</span>2022 by Jennifer Engle</h4>
     </footer>
     </html>
