added Hardcore Memory Game project to Dev Portfolio section

--- a/index.html
+++ b/index.html
@@ -36,15 +36,19 @@
                 <section class="devport">
                     <imageboxes class="imgbox">
                     <a href="https://jengle-dev.github.io/module-1-challenge/" target="_blank">
-                        <img src="assets\images\codeofHoriseon.png" width="200px" height="200px" class="imagebox-design"></a>
+                        <img src="assets/images/codeofHoriseon.png" width="200px" height="200px" class="imagebox-design"></a>
                 </imageboxes>
                 <imageboxes class="imgbox">
                     <a href="https://jengle-dev.github.io/demo-site/" target="_blank">
-                        <img src="assets\images\flexboxcolumn.png" width="200px" height="200px" class="imagebox-design"></a>
+                        <img src="assets/images/flexboxcolumn.png" width="200px" height="200px" class="imagebox-design"></a>
                 </imageboxes>
                 <imageboxes class="imgbox">
                     <a href="https://jengle-dev.github.io/module-2-mini-project-redo/" target="_blank">
-                        <img src="assets\images\demosite.png" width="200px" height="200px" class="imagebox-design"></a>
+                        <img src="assets/images/demosite.png" width="200px" height="200px" class="imagebox-design"></a>
+                </imageboxes>
+                <imageboxes class="imgbox">
+                    <a href="https://juliaguas17.github.io/hardcore-memory-game/" target="_blank">
+                        <img src="assets/images/Hardcore-Memory-Game.png" width="200px" height="200px" class="imagebox-design"></a>
                 </imageboxes>
                 </section>      
             </devport>
