footer tag was incomplete

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
             <!-- Card 4 -->
             <div class="card small card-small z-depth-3">
                 <div class="card-image">
-                    <img class="card-image placeholder" src="assets/images/Logo_Jennifer_Engle_image_only.png" alt="placeholder">
+                    <img class="card-image placeholder" src="assets/images/Logo_Jennifer_Engle_image_only.png"
+                        alt="placeholder">
                     <h4><span class="card-title">Project Placeholder</span></h4>
                 </div>
                 <div class="card-content">
@@ -117,7 +118,8 @@
             <!-- Card 5 -->
             <div class="card small card-small z-depth-3">
                 <div class="card-image">
-                    <img class="card-image placeholder" src="assets/images/Logo_Jennifer_Engle_image_only.png" alt="placeholder">
+                    <img class="card-image placeholder" src="assets/images/Logo_Jennifer_Engle_image_only.png"
+                        alt="placeholder">
                     <h4><span class="card-title">Project Placeholder</span></h4>
                 </div>
                 <div class="card-content">
@@ -131,7 +133,8 @@
             <!-- Card 6 -->
             <div class="card small card-small z-depth-3">
                 <div class="card-image">
-                    <img class="card-image placeholder" src="assets/images/Logo_Jennifer_Engle_image_only.png" alt="placeholder">
+                    <img class="card-image placeholder" src="assets/images/Logo_Jennifer_Engle_image_only.png"
+                        alt="placeholder">
                     <h4><span class="card-title">Project Placeholder</span></h4>
                 </div>
                 <div class="card-content">
@@ -145,7 +148,8 @@
             <!-- Card 7 -->
             <div class="card small card-small z-depth-3">
                 <div class="card-image">
-                    <img class="card-image placeholder" src="assets/images/Logo_Jennifer_Engle_image_only.png" alt="placeholder">
+                    <img class="card-image placeholder" src="assets/images/Logo_Jennifer_Engle_image_only.png"
+                        alt="placeholder">
                     <h4><span class="card-title">Project Placeholder</span></h4>
                 </div>
                 <div class="card-content">
@@ -159,7 +163,8 @@
             <!-- Card 8 -->
             <div class="card small card-small z-depth-3">
                 <div class="card-image">
-                    <img class="card-image placeholder" src="assets/images/Logo_Jennifer_Engle_image_only.png" alt="placeholder">
+                    <img class="card-image placeholder" src="assets/images/Logo_Jennifer_Engle_image_only.png"
+                        alt="placeholder">
                     <h4><span class="card-title">Project Placeholder</span></h4>
                 </div>
                 <div class="card-content">
@@ -173,7 +178,8 @@
             <!-- Card 9 -->
             <div class="card small card-small z-depth-3">
                 <div class="card-image">
-                    <img class="card-image placeholder" src="assets/images/Logo_Jennifer_Engle_image_only.png" alt="placeholder">
+                    <img class="card-image placeholder" src="assets/images/Logo_Jennifer_Engle_image_only.png"
+                        alt="placeholder">
                     <h4><span class="card-title">Project Placeholder</span></h4>
                 </div>
                 <div class="card-content">
@@ -239,10 +245,11 @@
     </div>
 
     <!-- Footer  -->
-    <footer <div class="footer">
-        <img class="portfolioPic selfie" src="assets/images/Oct22Selfie.png" alt="woman smiling with short hair">
-        <p class="footer-text">Thank you for visiting my portfolio page!</p>
-        <p class="footer-text"><span>&copy</span> 2022-2023 by Jennifer Engle</p>
+    <footer>
+        <div class="footer">
+            <img class="portfolioPic selfie" src="assets/images/Oct22Selfie.png" alt="woman smiling with short hair">
+            <p class="footer-text">Thank you for visiting my portfolio page!</p>
+            <p class="footer-text"><span>&copy</span> 2022-2023 by Jennifer Engle</p>
         </div>
     </footer>
 
