completed a footer tag
could not push from local for some reason. I needed a closing carrot for the footer

--- a/index.html
+++ b/index.html
@@ -239,10 +239,11 @@
     </div>
 
     <!-- Footer  -->
-    <footer <div class="footer">
-        <img class="portfolioPic selfie" src="assets/images/Oct22Selfie.png" alt="woman smiling with short hair">
-        <p class="footer-text">Thank you for visiting my portfolio page!</p>
-        <p class="footer-text"><span>&copy</span> 2022-2023 by Jennifer Engle</p>
+    <footer> 
+        <div class="footer">
+            <img class="portfolioPic selfie" src="assets/images/Oct22Selfie.png" alt="woman smiling with short hair">
+            <p class="footer-text">Thank you for visiting my portfolio page!</p>
+            <p class="footer-text"><span>&copy</span> 2022-2023 by Jennifer Engle</p>
         </div>
     </footer>
 
