added latest group project, Project 2

--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
             <!-- Card 4 -->
             <div class="card small card-small z-depth-3">
                 <div class="card-image">
-                    <img class="card-image placeholder" src="assets/images/Logo_Jennifer_Engle_image_only.png"
+                    <img class="card-image placeholder" src="assets/images/Triple-J-Logo.png"
                         alt="placeholder">
-                    <h4><span class="card-title">Project Placeholder</span></h4>
+                    <h4><span class="card-title">Triple J Event Venue</span></h4>
                 </div>
                 <div class="card-content">
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p>Node, Tailwind CSS, Javascript, Express, Adobe Illustrator, MVC</p>
                 </div>
                 <div class="card-action">
-                    <a href="#" target=”_blank”>Visit Page</a>
+                    <a href="https://triple-j-venues.herokuapp.com/" target=”_blank”>Visit Page</a>
                 </div>
             </div>
 
